--- a/src/layouts/components/Header.module.scss
+++ b/src/layouts/components/Header.module.scss
@@ -6,12 +6,12 @@
   background: #fff !important;
 }
 
-.stepsContent {
-  min-height: 200px;
-  margin-top: 16px;
-  padding-top: 20px;
-  text-align: center;
-  background-color: #fafafa;
-  border: 1px dashed #e9e9e9;
-  border-radius: 2px;
+.userName {
+  cursor: 'pointer';
+  padding-left: 10;
+  margin-right: 20;
+}
+
+.avatar {
+  margin-left: 30px;
 }
