--- a/src/layouts/components/Header.module.scss
+++ b/src/layouts/components/Header.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-between;
   background: #fff !important;
+  height: 64px !important;
 }
 
 .userName {
