--- a/src/views/Login/index.module.scss
+++ b/src/views/Login/index.module.scss
@@ -1,11 +1,40 @@
+// .container {
+//   display: flex;
+//   justify-content: center;
+//   width: 100%;
+//   height: 100%;
+//   background: url('../../assets/images/xyj.png');
+//   background-repeat: no-repeat;
+//   background-size: 100% 100%;
+// }
 .container {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: url('../../assets/images/corra.png');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  overflow: auto;
+  background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgba(60, 132, 206, 1) 38%,
+    rgba(48, 238, 226, 1) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 
 .wrapper {
@@ -19,7 +48,6 @@
 .leftWrapper {
   width: 766px;
   height: 615px;
-  // background: url('../../assets/images/zuoce-img.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -27,9 +55,9 @@
 .formWrapper {
   width: 538px;
   height: 613px;
-  background: #fff;
-  box-shadow: 0px 0px 20px 0px rgba(216, 224, 240, 0.8);
   border-radius: 8px;
+  hyphens: auto;
+  background: hsla(0, 0%, 100%, 0.2);
 }
 
 .systemTitle {
