--- a/src/layouts/components/Container.module.scss
+++ b/src/layouts/components/Container.module.scss
@@ -1,9 +1,8 @@
-.sidePanel {
+.Container {
+  width: 100%;
   height: 100%;
-}
-
-.sideContainer {
-  flex: 1;
-  min-width: 760px;
-  overflow: auto;
+  box-sizing: border-box;
+  padding: 20px;
+  overflow: hidden;
+  background: #fff;
 }
